--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/runtime": "^7.7.7",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.0",
     "ejs": "^3.0.1",
@@ -47,6 +49,7 @@
     "node-sass": "^4.13.0",
     "pm2": "^4.2.1",
     "react": "16",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "16",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^8.0.0",
